--- a/dashboard.html
+++ b/dashboard.html
@@ -305,7 +305,7 @@
                             <a class="dropdown-item" href="profile.html"><i class="fas fa-user mr-2"></i>Profile</a>
                             <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Settings</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="login.html"><i class="fas fa-sign-out-alt mr-2"></i>Logout</a>
+                            <a class="dropdown-item" href="index.html"><i class="fas fa-sign-out-alt mr-2"></i>Logout</a>
                         </div>
                     </div>
                 </div>
