--- a/dashboard.html
+++ b/dashboard.html
@@ -652,7 +652,7 @@
             <div class="page-header">
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
-                        <h2 class="mb-2">Welcome back, Maria Isabel!</h2>
+                        <h2 class="mb-2">Welcome back, Peter John!</h2>
                         <p class="mb-0 opacity-75">Grade 5 - Section A | School Year 2025-2026</p>
                     </div>
                     <div class="text-right d-none d-md-block">
