--- a/dashboard.html
+++ b/dashboard.html
@@ -772,7 +772,7 @@
             <!-- Mobile Profile Section -->
             <div class="mobile-sidebar-profile">
                 <div class="mobile-profile-info">
-                    <img src="/placeholder.svg?height=50&width=50" alt="Profile" class="mobile-profile-avatar">
+                    <img src="/public/img/peter11s.png?height=50&width=50" alt="Profile" class="mobile-profile-avatar">
                     <div class="mobile-profile-details">
                         <h6>Peter John</h6>
                         <p>Grade 5 - Section A</p>
